objects/QIDC__Marketing_Request_Staging_ims__c.object
<CustomObject>
    <description>Stages Push requests from Salesforce to Nexxus Marketing application.</description>
    <fields>
        <fullName>QIDC__Entity_Name_ims__c</fullName>
        <description>Marketing Entity Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__ExternalID_ims__c</fullName>
        <description>External ID associated with staging request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ExternalID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Instance_Name_ims__c</fullName>
        <description>Marketing Instance Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of Marketing Instance to which data push request has been made.</inlineHelpText>
        <label>Instance Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__JobID_ims__c</fullName>
        <description>Job ID returned by Marketing in response.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>JobID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Request_Data_ims__c</fullName>
        <description>Object data sent to Marketing in request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Request_SequenceID_ims__c</fullName>
        <description>Job level Request Sequence#</description>
        <label>Request SequenceID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marketing Request Staging</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Requests Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>